log/build_2024-05-08_23-05-02/learning/stderr.log
/usr/local/lib/python3.6/dist-packages/setuptools/command/install.py:37: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  setuptools.SetuptoolsDeprecationWarning,
  File "/home/mi/install/learning/lib/python3.6/site-packages/learning/move_x.py", line 92
    else
       ^
SyntaxError: invalid syntax

